--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,8 @@
 API_BASE_URL = https://homologacao.re7consult.com.br/Re7_Consult_Homolog
 API_TOKEN = 'h2M!QuvFbEjo@%GIW#SFRO4t*3QKgIdVDya8vdq7'
+
+--> api prd https://re7.praticapublica.com.br/Re7_Pratica
+--> token prd 053262175a9b86bed27e902a0785e70530e7cb1d
+
+--> api hml https://homologacao.re7consult.com.br/Re7_Consult_Homolog
+--> token hml h2M!QuvFbEjo@%GIW#SFRO4t*3QKgIdVDya8vdq7
