--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-API_BASE_URL = https://sistema.re7consult.com.br/Re7_Consult
+API_BASE_URL = https://re7.praticapublica.com.br/Re7_Pratica
 API_TOKEN = '053262175a9b86bed27e902a0785e70530e7cb1d'
