--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = re7_pratica
+PRODUCT_NAME = Re7 Prática;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.re7Pratica
+PRODUCT_BUNDLE_IDENTIFIER = br.com.re7pratica;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
