--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: re7_pratica
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -45,6 +45,21 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   flutter_native_splash: ^1.3.2
+  flutter_launcher_icons: ^0.9.3
+
+flutter_icons:
+  image_path_android: "assets/favicon.png"
+  image_path_ios: "assets/favicon.png"
+  adaptive_icon_foreground: "assets/favicon.png"
+  adaptive_icon_background: "#ffffff"
+  android: true
+  ios: true
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/logo.png
+  android: true
+  ios: true
 
 flutter:
   uses-material-design: true
